--- a/views/index.ejs
+++ b/views/index.ejs
@@ -203,7 +203,7 @@
                     <h3 class="mt-4">Business and Development House</h3>
                     <div class="row">
                         <div class="member col-lg-6">
-                            <img class="member-body profile-pic" src="/images/people/tyoma.jpg" alt="">
+                            <img class="member-body profile-pic" src="https://lh6.googleusercontent.com/UweROYx2CpzyySl9lOLHkv4lxdhtGBnFgsRUwNq14l89AGy3Wwm5piYXoN55FiEQP3_lg8paORXgbHMr6eNirIEZwbBHLA7U6jhIJAH10L3hXuOBug2fXBY_4BaweMHn6w=w1280" alt="">
                             <div class="member-body">
                                 <h4 class="bluetext">Business Manager</h4>
                                 <h3>Tyoma <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e6/Flag_of_Slovakia.svg/1280px-Flag_of_Slovakia.svg.png" alt="(Slovakia)"></h3>
