--- a/views/posts/post1.ejs
+++ b/views/posts/post1.ejs
@@ -15,5 +15,22 @@
     <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <div class="container whitetext px-3">
+        <h1 class="display-3">The liquidation of the Belarussian Youth European Parliament</h1>
+        <h3>By Lia Covaleva</h3>
+    </div>
+    <div class="container article">
+        <h4><b>What is the European Youth Parliament and what is its importance?</b></h4>
+        <h5>The European Youth Parliament is one of the largest European platforms for political debate, intercultural encounters, European civic education, and the exchange of ideas for young people in Europe. Since its founding in 1987, EYP has inspired and empowered a young generation of informed, open-minded, responsible, and active citizens that shape society and drive impact. The European Youth Parliament is a peer-to-peer educational programme that brings together young people from across Europe to debate the pressing issues of our time. It provides a forum for young people to develop and express their opinions on European political and social issues in an open and welcoming environment. </h5>
+        
+        <h4><b>What is the socio-political context behind the Belarussian Youth Parliament liquidation? </b></h4>
+        <h5>The civil society in Belarus is experiencing increasing suppression. The Lukashenko regime unleashed an all-out war on civil society. Today, at least 608 are behind bars on bogus tax, mass rioting and various other falsified charges. The authorities jailed at least 27 media workers over their reporting and changed the country’s media legislation to make it virtually impossible for journalists to report on the public protests that have followed the sham presidential elections in 2020.  In July 2021, Lukashenko began to  “purge” the country of leading civil society groups. At least 53 independent organizations are already under “liquidation procedure”, including the European Youth Parliament, and some of the most prominent Belarusian human rights activists are in jail awaiting trial on unclear charges.</h5>
+        
+        <h4><b>What actions did the government specifically undertake against EYP?</b> </h4>
+        <h5>Over the past week, more than ten young people who happened to be involved in the most recent event of EYP Belarus were interrogated by the State Security Committee of the Republic of Belarus, which has been actively targeting the Belarusian opposition. Members and participants of the EYP have been abducted from their homes and universities without a lawyer or access to any legal help. Darya Skorokhod, the President of EYP Belarus explains: “Our active members who were based in Belarus have been taken for a KGB interrogation without any notifications or official reasons behind. They were mainly asked questions about the organizational process of the event, its financing sources and sponsors, as well as the Board structure and the political views of people involved. As for now, we are waiting for the updates, but two people had to relocate from the country already. I am condemning the actions of the Belarusian authorities and calling for them to stop the pressure by interrogating them purely for being a part of EYP.”</h5>
+        <h5> On Friday, 23rd of July 2021, the National Committee representing the European Youth Parliament in Belarus has been put under liquidation by the Belarusian government. Neither were they informed nor was their case heard before this decision was made. </h5>
+
+        <h4><b>How does this directly influence Belarusian Youth?</b></h4>
+        <h5>“The European Union doesn’t fully understand what happens here in Belarus,” Lavon Marozau, International Secretary of RADA, told EURACTIV. “This is not a crisis, this is a huge national war against civil society, against the people,” he said. Marozau said that “young people have had enough – the young generation cares about the future of this country, we are not ready to put up with the policy of violence, oppression and hatred that we have seen for the last three months in Belarus”. Asked what young people’s vision for the country is, he said most of his peers are looking towards Europe but want to stay in Belarus and shape its future. “I understand how to live in the European Union, and I could likely live in an EU member state and get a job – but this is my country and I don’t want to feel Russia gaze upon us as their small brother, just as I don’t want to feel the judgment from the European Union that we are a second-class democracy,” he said.</h5>
+    </div>
 </body>
