--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Youth United</title>
-    <link rel="icon" href="https://lh6.googleusercontent.com/kSJjAyUsbjxR2f8fn76enzZbbMKzvPZixl3DguoIqj0tHPgaD_a9HJS8nOEblj9cfOxPv1lNaGjclpJzHikNRxi1mqb5evwwYzT5tblFUG4zVT3B">
+    <link rel="icon" href="/images/logo.jpg">
     
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/stylesheets/app.css">
