--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
         <img src="/images/logo.jpg" alt="">
     </div>
     <div id="home">
-        <div id="large">Youth United</div>
+        <div id="large"><b>Youth United</b></div>
         <div class="container container-small">
             <h2>
                 The only international youth crisis media dedicated to uniting young people to fight against global issues, oppression and injustice.
