--- a/views/posts/post2.ejs
+++ b/views/posts/post2.ejs
@@ -17,10 +17,10 @@
 <body>
     <div class="container whitetext px-3">
         <h1 class="display-3">Document fără titlu</h1>
+        <h5 class="yellowtext">Queer Voices – what can a festival in the poorest country of Europe tell us about the future of the LGBTQ+ community</h5>
         <h3>By Daniel Luchian</h3>
     </div>
     <div class="container article">
-        <h4>Queer Voices – what can a festival in the poorest country of Europe tell us about the future of the LGBTQ+ community</h4>
         <h5>It is no secret that post-soviet states are home to reactionary politics that, more often than not, have targeted minority groups. Moldova is one of the most homophobic countries in Europe, and Queer people are often ostracized simply for coming out.</h5>
         <h5>As response to the constant social pressure towards sexual minorities of Moldova, Queer Voices, an international film festival based in Chișinău, the capital of Moldova, was established in 2018. Its purpose was clear – providing each LGBTQ+ community member with a voice and a safe place. The festival has managed to promote art in all its forms and  to make it clear to both the Moldovan and the international society what being queer is really about.</h5>
         <h5>The festival is known for showing the kind of exhibits and movie screenings that the traditional Moldovan public doesn’t usually get to see, while simultaneously introducing them to topics like “coming out” , ‘“self discovery” or “queer identity”. In the autumn of 2021, for the first time since the festival was organized, Queer voices had a theater performance with queer actors from all over the country that expressed their emotions through their own body movements and carefully-selected words, as well as a ballroom tryout where everyone was welcomed to show their vogue dance moves on the runaway. </h5>
@@ -31,5 +31,8 @@
         <h5>Moreover, they have organized a cinematography workshop for interested young people. A professional has encouraged dozens of youngesters to grab a camera and start telling their story, as it eventually turns into a fully-fledged. Their creations are then presented to the public and a jury at the closing gala , and the lucky winner gets to continue on developing their idea with the filming crew.</h5>
         <h5>Naturally, the festival had its rough times and was not always as welcomed as it is now. Sadly, many Post-Soviet societies are not ready to fully embrace something as “out of the ordinary” as the LGBTQ+ community, but small and secure steps have been taken to ensure great success in the future.</h5>
         <h5>And so, with time and dedication, Queer Voices has grown into a safe place for anyone in need, and it still continues to protect and encourage Queer people in Eastern Europe to speak up and get rid of the oppression they are facing, making people to acknowledge and eventually accept their presence.</h5>
+    </div>
+    <div class="container py-3 text-center">
+        <a class="link-light" href="/">Go back</a>
     </div>
 </body>
