--- a/views/index.ejs
+++ b/views/index.ejs
@@ -108,7 +108,7 @@
                 <h1 class="bluetext display-2">The Team</h1>
                 <h5>Currently consisting of 15 aspiring young Europeans, including Young European Ambassadors to the Eastern Partnership, previous winners of the European Citizen's prize, and many others, our team proudly supports solidarity between all people on the European continent.</h5>
                 <div>
-                    <h3 class="mt-4">Marketing House</h3>
+                    <h3 class="mt-4">Marketing and IT House</h3>
                     <div class="row">
                         <div class="member col-lg-6">
                             <img class="member-body profile-pic" src="/images/people/katya.png" alt="">
@@ -123,6 +123,24 @@
                             <div class="member-body">
                                 <h4 class="bluetext">Designer</h4>
                                 <h3>Alice <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e6/Flag_of_Slovakia.svg/1280px-Flag_of_Slovakia.svg.png" alt=""></h3>
+                                <p class="tealtext"></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="member col-lg-6">
+                            <img class="member-body profile-pic" src="/images/people/oliver.jpg" alt="">
+                            <div class="member-body">
+                                <h4 class="bluetext">Web Developer</h4>
+                                <h3>Oliver <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e6/Flag_of_Slovakia.svg/1280px-Flag_of_Slovakia.svg.png" alt=""></h3>
+                                <p class="tealtext"></p>
+                            </div>
+                        </div>
+                        <div class="member col-lg-6">
+                            <img class="member-body profile-pic" src="/images/people/kristof.jpg" alt="">
+                            <div class="member-body">
+                                <h4 class="bluetext">IT Consultant</h4>
+                                <h3>Krištof <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e6/Flag_of_Slovakia.svg/1280px-Flag_of_Slovakia.svg.png" alt=""></h3>
                                 <p class="tealtext"></p>
                             </div>
                         </div>
