--- a/views/index.ejs
+++ b/views/index.ejs
@@ -129,7 +129,7 @@
                     </div>
                     <div class="row">
                         <div class="member col-lg-6">
-                            <img class="member-body profile-pic" src="/images/people/oliver.jpg" alt="">
+                            <img class="member-body profile-pic" src="/images/people/oliver.JPG" alt="">
                             <div class="member-body">
                                 <h4 class="bluetext">Web Developer</h4>
                                 <h3>Oliver <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e6/Flag_of_Slovakia.svg/1280px-Flag_of_Slovakia.svg.png" alt=""></h3>
@@ -137,7 +137,7 @@
                             </div>
                         </div>
                         <div class="member col-lg-6">
-                            <img class="member-body profile-pic" src="/images/people/kristof.jpg" alt="">
+                            <img class="member-body profile-pic" src="/images/people/kristof.JPG" alt="">
                             <div class="member-body">
                                 <h4 class="bluetext">IT Consultant</h4>
                                 <h3>Krištof <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e6/Flag_of_Slovakia.svg/1280px-Flag_of_Slovakia.svg.png" alt=""></h3>
