--- a/views/posts/post1.ejs
+++ b/views/posts/post1.ejs
@@ -17,7 +17,7 @@
 <body>
     <div class="container whitetext px-3">
         <h1 class="display-3">The liquidation of the Belarussian Youth European Parliament</h1>
-        <h3>By Lia Covaleva</h3>
+        <h3>By Lia Covaliov</h3>
     </div>
     <div class="container article">
         <h4><b>What is the European Youth Parliament and what is its importance?</b></h4>
