--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,24 +32,24 @@
     </div>
     <div id="white">
         <div class="container">
-            <div class="subpart" href="">
-                <h1 class="bluetext">Recent articles</h1>
+            <div class="subpart">
+                <h1 class="bluetext display-2">Recent articles</h1>
                 <a href="posts/post1">
                     <div class="post">
                         <h2>The liquidation of the Belarussian Youth European Parliament</h2>
-                        <h5 class="tealtext">Lia Covaleva · 12 February 2022</h5>
+                        <h5 class="tealtext">Lia Covaliov · 10 February 2022</h5>
                     </div>
                 </a>
                 <a href="posts/post2">
                     <div class="post">
-                        <h2>Document fără titlu</h2>
-                        <h5 class="tealtext">Daniel Luchian · 12 February 2022</h5>
+                        <h2>The queer community in Moldova</h2>
+                        <h5 class="tealtext">Daniel Luchian · 5 February 2022</h5>
                     </div>
                 </a>
                 <a href="posts/post3">
                     <div class="post">
                         <h2>Erdogan imprisons journalist</h2>
-                        <h5 class="tealtext">Abrar Elmubark · 12 February 2022</h5>
+                        <h5 class="tealtext">Abrar Elmubark · 7 February 2022</h5>
                     </div>
                 </a>
             </div>
@@ -115,7 +115,8 @@
                             <div class="member-body">
                                 <h4 class="bluetext">Marketing Manager</h4>
                                 <h3>Katya <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/f/f3/Flag_of_Russia.svg" alt=""></h3>
-                                <p class="tealtext"></p>
+                                <div class="tealtext">She/her</div>
+                                <div class="tealtext">ernikovak@mail.ru</div>
                             </div>
                         </div>
                         <div class="member col-lg-6">
@@ -123,7 +124,8 @@
                             <div class="member-body">
                                 <h4 class="bluetext">Designer</h4>
                                 <h3>Alice <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e6/Flag_of_Slovakia.svg/1280px-Flag_of_Slovakia.svg.png" alt=""></h3>
-                                <p class="tealtext"></p>
+                                <div class="tealtext">She/her</div>
+                                <div class="tealtext">alisa.06022004@gmail.com </div>
                             </div>
                         </div>
                     </div>
@@ -133,7 +135,8 @@
                             <div class="member-body">
                                 <h4 class="bluetext">Web Developer</h4>
                                 <h3>Oliver <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e6/Flag_of_Slovakia.svg/1280px-Flag_of_Slovakia.svg.png" alt=""></h3>
-                                <p class="tealtext"></p>
+                                <div class="tealtext">He/him</div>
+                                <div class="tealtext">oliver.nagy@student.leaf.academy</div>
                             </div>
                         </div>
                         <div class="member col-lg-6">
@@ -141,7 +144,8 @@
                             <div class="member-body">
                                 <h4 class="bluetext">IT Consultant</h4>
                                 <h3>Kristóf <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c1/Flag_of_Hungary.svg/1200px-Flag_of_Hungary.svg.png" alt=""></h3>
-                                <p class="tealtext"></p>
+                                <div class="tealtext">He/him</div>
+                                <div class="tealtext">kristof.varga@student.leaf.academy</div>
                             </div>
                         </div>
                     </div>
@@ -152,7 +156,8 @@
                             <div class="member-body">
                                 <h4 class="bluetext">Editor-In-Chief</h4>
                                 <h3>Cătălin <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/92/Flag_of_Belgium_%28civil%29.svg/2560px-Flag_of_Belgium_%28civil%29.svg.png" alt=""></h3>
-                                <p class="tealtext"></p>
+                                <div class="tealtext">He/him</div>
+                                <div class="tealtext">catalin.dontu@student.leaf.academy</div>
                             </div>
                         </div>
                         <div class="member col-lg-6">
@@ -160,7 +165,8 @@
                             <div class="member-body">
                                 <h4 class="bluetext">Author</h4>
                                 <h3>Dan <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/27/Flag_of_Moldova.svg/2560px-Flag_of_Moldova.svg.png" alt=""></h3>
-                                <p class="tealtext"></p>
+                                <div class="tealtext">He/him</div>
+                                <div class="tealtext">whatdoyoumeandan@gmail.com</div>
                             </div>
                         </div>
                     </div>
@@ -170,7 +176,8 @@
                             <div class="member-body">
                                 <h4 class="bluetext">Author</h4>
                                 <h3>Regina <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/7/75/Flag_of_Estonia.jpg" alt=""></h3>
-                                <p class="tealtext"></p>
+                                <div class="tealtext">She/her</div>
+                                <div class="tealtext">regina.krentsel@gmail.com</div>
                             </div>
                         </div>
                         <div class="member col-lg-6">
@@ -178,7 +185,8 @@
                             <div class="member-body">
                                 <h4 class="bluetext">Author</h4>
                                 <h3>Lia <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/27/Flag_of_Moldova.svg/2560px-Flag_of_Moldova.svg.png" alt=""></h3>
-                                <p class="tealtext"></p>
+                                <div class="tealtext">She/they</div>
+                                <div class="tealtext">lia.covaliov909@gmail.com</div>
                             </div>
                         </div>
                     </div>
@@ -188,7 +196,8 @@
                             <div class="member-body">
                                 <h4 class="bluetext">Author</h4>
                                 <h3>Sonya <img class="flag" src="https://upload.wikimedia.org/wikipedia/en/thumb/a/ae/Flag_of_the_United_Kingdom.svg/1024px-Flag_of_the_United_Kingdom.svg.png" alt=""></h3>
-                                <p class="tealtext"></p>
+                                <div class="tealtext">She/her</div>
+                                <div class="tealtext">sofja.soboleva@gmail.com</div>
                             </div>
                         </div>
                         <div class="member col-lg-6">
@@ -196,7 +205,8 @@
                             <div class="member-body">
                                 <h4 class="bluetext">Author</h4>
                                 <h3>Zlata <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/f/f3/Flag_of_Russia.svg" alt=""></h3>
-                                <p class="tealtext"></p>
+                                <div class="tealtext">She/her</div>
+                                <div class="tealtext">weirdomuffin@gmail.com</div>
                             </div>
                         </div>
                     </div>
@@ -206,7 +216,8 @@
                             <div class="member-body">
                                 <h4 class="bluetext">Author</h4>
                                 <h3>Riri <img class="flag" src="https://upload.wikimedia.org/wikipedia/en/thumb/4/4c/Flag_of_Sweden.svg/1200px-Flag_of_Sweden.svg.png" alt=""></h3>
-                                <p class="tealtext"></p>
+                                <div class="tealtext">She/her</div>
+                                <div class="tealtext">rirush2004@gmail.com</div>
                             </div>
                         </div>
                         <div class="member col-lg-6">
@@ -214,7 +225,8 @@
                             <div class="member-body">
                                 <h4 class="bluetext">Author</h4>
                                 <h3>Teo <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/73/Flag_of_Romania.svg/1200px-Flag_of_Romania.svg.png" alt=""></h3>
-                                <p class="tealtext"></p>
+                                <div class="tealtext">They/them</div>
+                                <div class="tealtext">erika.trusca@gmail.com</div>
                             </div>
                         </div>
                     </div>
@@ -225,7 +237,8 @@
                             <div class="member-body">
                                 <h4 class="bluetext">Business Manager</h4>
                                 <h3>Tyoma <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e6/Flag_of_Slovakia.svg/1280px-Flag_of_Slovakia.svg.png" alt="(Slovakia)"></h3>
-                                <p class="tealtext"></p>
+                                <div class="tealtext">He/him</div>
+                                <div class="tealtext">temabelkovest@gmail.com</div>
                             </div>
                         </div>
                         <div class="member col-lg-6">
@@ -233,7 +246,8 @@
                             <div class="member-body">
                                 <h4 class="bluetext">Development Manager</h4>
                                 <h3>Ilia <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e6/Flag_of_Slovakia.svg/1280px-Flag_of_Slovakia.svg.png" alt=""></h3>
-                                <p class="tealtext"></p>
+                                <div class="tealtext">He/him</div>
+                                <div class="tealtext">ilia.boldyrev@student.leaf.academy</div>
                             </div>
                         </div>
                     </div>
@@ -243,7 +257,7 @@
                             <div class="member-body">
                                 <h4 class="bluetext">Mood Manager</h4>
                                 <h3>Zenja <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/7/75/Flag_of_Estonia.jpg" alt=""></h3>
-                                <p class="tealtext"></p>
+                                <div class="tealtext">She/her</div>
                             </div>
                         </div>
                     </div>
