--- a/views/posts/post2.ejs
+++ b/views/posts/post2.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document fără titlu</title>
+    <title>The queer community in Moldova</title>
     <link rel="icon" href="/images/logo.jpg">
     
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div class="container whitetext px-3">
-        <h1 class="display-3">Document fără titlu</h1>
+        <h1 class="display-3">The queer community in Moldova</h1>
         <h5 class="yellowtext">Queer Voices – what can a festival in the poorest country of Europe tell us about the future of the LGBTQ+ community</h5>
         <h3>By Daniel Luchian</h3>
     </div>
