--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -134,3 +134,9 @@ a {
     display: inline-block;
 }
 
+@media screen and (max-width: 768px) {
+    .logo {
+        display: none;
+    }
+    
+}
