--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,7 @@
         <div id="large"><b>Youth United</b></div>
         <div class="container container-small">
             <h2>
-                The only international youth crisis media dedicated to uniting young people to fight against global issues, oppression and injustice.
+                A bold international youth media platform dedicated to uniting young voices in the fight against oppression and injustice all around the world.
             </h2>
             <h5 class="yellowtext">
                 <em>We strive for a fair world in which basic civil and political rights are truly universal.</em>
@@ -280,8 +280,9 @@
                 </div>
             </div>
             <div class="col-6">
-                <p>Youth United © 2022</p>
-                <a href="" class="yellowtext">Back to top</a>
+                <a href="#" class="yellowtext">Back to top</a>
+                <p class="mt-4">Youth United © 2022</p>
+                <p class="mt-4">Designed by Michael Filip McLean</p>
             </div>
         </div>
     </div>
