--- a/views/index.ejs
+++ b/views/index.ejs
@@ -62,6 +62,24 @@
                         <h5 class="tealtext">Abrar Elmubark · 7 February 2022</h5>
                     </div>
                 </a>
+                <a href="posts/post4">
+                    <div class="post">
+                        <h2>The impact of social media on mental health</h2>
+                        <h5 class="tealtext">Regina · 16 February 2022</h5>
+                    </div>
+                </a>
+                <a href="posts/post5">
+                    <div class="post">
+                        <h2>Civil Assistance Fund as a foreign agent</h2>
+                        <h5 class="tealtext">Zlata · 20 February 2022</h5>
+                    </div>
+                </a>
+                <a href="posts/post6">
+                    <div class="post">
+                        <h2>Stories of heroism in the Ukrainian Conflict</h2>
+                        <h5 class="tealtext">Teo · 28 February 2022</h5>
+                    </div>
+                </a>
             </div>
             <div id="history">
                 <div class="filler"></div>
