improved articles footer

--- a/views/posts/post1.ejs
+++ b/views/posts/post1.ejs
@@ -33,7 +33,5 @@
         <h4><b>How does this directly influence Belarusian Youth?</b></h4>
         <h5>“The European Union doesn’t fully understand what happens here in Belarus,” Lavon Marozau, International Secretary of RADA, told EURACTIV. “This is not a crisis, this is a huge national war against civil society, against the people,” he said. Marozau said that “young people have had enough – the young generation cares about the future of this country, we are not ready to put up with the policy of violence, oppression and hatred that we have seen for the last three months in Belarus”. Asked what young people’s vision for the country is, he said most of his peers are looking towards Europe but want to stay in Belarus and shape its future. “I understand how to live in the European Union, and I could likely live in an EU member state and get a job – but this is my country and I don’t want to feel Russia gaze upon us as their small brother, just as I don’t want to feel the judgment from the European Union that we are a second-class democracy,” he said.</h5>
     </div>
-    <div class="container py-3 text-center">
-        <a class="link-light" href="/">Go back</a>
-    </div>
+    <%- include("../partials/footer-article") %>
 </body>
