--- a/views/posts/post3.ejs
+++ b/views/posts/post3.ejs
@@ -43,7 +43,5 @@
         <h5>As free press is being restricted in Turkey, Turkish youth are bravely trying to fight for a country in which they would be able to share their views without being afraid of a repressive response from the Government. The Sedef Kabaș scandal is only the latest in a long series of arrests that have happened both in Turkey and abroad, because of autocratic leaders’ need to cement their power through whatever means necessary.</h5>
 
     </div>
-    <div class="container py-3 text-center">
-        <a class="link-light" href="/">Go back</a>
-    </div>
+    <%- include("../partials/footer-article") %>
 </body>
