--- a/views/posts/post5.ejs
+++ b/views/posts/post5.ejs
@@ -32,7 +32,5 @@
         <h5>The saddest part is that most “foreign agents” face threats, and they can`t conduct business the way they used to. Some of them even face liquidation. We can all support “agents” by volunteering, donating and spreading awareness. Nowadays, the organizations that are most demonized may do the most valuable work, even if it`s difficult.</h5>
         <h6>* Civil Assistance fund is recognized as a foreign agent in Russian Federation. It is necessary to put this remark.</h6>
     </div>
-    <div class="container py-3 text-center">
-        <a class="link-light" href="/">Go back</a>
-    </div>
+    <%- include("../partials/footer-article") %>
 </body>
