--- a/views/posts/post6.ejs
+++ b/views/posts/post6.ejs
@@ -43,7 +43,5 @@
         <h5 class="mt-5">Even though it all seems bleak, there is hope for the people of Ukraine. The Russian economy is actively collapsing, and Ukrainian pushback is at the very least fierce and impressive. Donations and solidarity are crucial at this time. Glory to democracy, Slava Ukraini!</h5>
         
     </div>
-    <div class="container py-3 text-center">
-        <a class="link-light" href="/">Go back</a>
-    </div>
+    <%- include("../partials/footer-article") %>
 </body>
