--- a/views/posts/post2.ejs
+++ b/views/posts/post2.ejs
@@ -32,7 +32,5 @@
         <h5>Naturally, the festival had its rough times and was not always as welcomed as it is now. Sadly, many Post-Soviet societies are not ready to fully embrace something as “out of the ordinary” as the LGBTQ+ community, but small and secure steps have been taken to ensure great success in the future.</h5>
         <h5>And so, with time and dedication, Queer Voices has grown into a safe place for anyone in need, and it still continues to protect and encourage Queer people in Eastern Europe to speak up and get rid of the oppression they are facing, making people to acknowledge and eventually accept their presence.</h5>
     </div>
-    <div class="container py-3 text-center">
-        <a class="link-light" href="/">Go back</a>
-    </div>
+    <%- include("../partials/footer-article") %>
 </body>
