--- a/views/posts/post4.ejs
+++ b/views/posts/post4.ejs
@@ -41,7 +41,5 @@
         -->
         
     </div>
-    <div class="container py-3 text-center">
-        <a class="link-light" href="/">Go back</a>
-    </div>
+    <%- include("../partials/footer-article") %>
 </body>
