--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible&display=swap" rel="stylesheet">
 </head>
 <body>
-    <nav class="fixed-top navbarcontent d-flex flex-column justify-content-center">
+    <nav id="navbar" class="fixed-top navbarcontent d-flex flex-column justify-content-center">
         <div class="container d-flex mx-auto justify-content-around">
             <a href="#articles" class="whitetext">Recent Articles</a>
             <a href="#history" class="whitetext">History</a>
@@ -141,7 +141,7 @@
                 <div>
                     <h3 class="mt-4">Marketing and IT House</h3>
                     <div class="row">
-                        <div class="member col-lg-6">
+                        <div class="member col-lg-5">
                             <img class="member-body profile-pic" src="/images/people/katya.png" alt="">
                             <div class="member-body">
                                 <h4 class="bluetext">Marketing Manager</h4>
@@ -150,7 +150,7 @@
                                 <div class="tealtext">ernikovak@mail.ru</div>
                             </div>
                         </div>
-                        <div class="member col-lg-6">
+                        <div class="member col-lg-5">
                             <img class="member-body profile-pic" src="/images/people/alice.png" alt="">
                             <div class="member-body">
                                 <h4 class="bluetext">Designer</h4>
@@ -161,7 +161,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="member col-lg-6">
+                        <div class="member col-lg-5">
                             <img class="member-body profile-pic" src="/images/people/oliver.JPG" alt="">
                             <div class="member-body">
                                 <h4 class="bluetext">Web Developer</h4>
@@ -170,7 +170,7 @@
                                 <div class="tealtext">oliver.nagy@student.leaf.academy</div>
                             </div>
                         </div>
-                        <div class="member col-lg-6">
+                        <div class="member col-lg-5">
                             <img class="member-body profile-pic" src="/images/people/kristof.JPG" alt="">
                             <div class="member-body">
                                 <h4 class="bluetext">IT Consultant</h4>
@@ -182,7 +182,7 @@
                     </div>
                     <h3 class="mt-4">Creator House</h3>
                     <div class="row">
-                        <div class="member col-lg-6">
+                        <div class="member col-lg-5">
                             <img class="member-body profile-pic" src="/images/people/catalin.png" alt="">
                             <div class="member-body">
                                 <h4 class="bluetext">Editor-In-Chief</h4>
@@ -191,7 +191,7 @@
                                 <div class="tealtext">catalin.dontu@student.leaf.academy</div>
                             </div>
                         </div>
-                        <div class="member col-lg-6">
+                        <div class="member col-lg-5">
                             <img class="member-body profile-pic" src="/images/people/dan.png" alt="">
                             <div class="member-body">
                                 <h4 class="bluetext">Author</h4>
@@ -202,7 +202,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="member col-lg-6">
+                        <div class="member col-lg-5">
                             <img class="member-body profile-pic" src="/images/people/regina.png" alt="">
                             <div class="member-body">
                                 <h4 class="bluetext">Author</h4>
@@ -211,7 +211,7 @@
                                 <div class="tealtext">regina.krentsel@gmail.com</div>
                             </div>
                         </div>
-                        <div class="member col-lg-6">
+                        <div class="member col-lg-5">
                             <img class="member-body profile-pic" src="/images/people/lia.jpg" alt="">
                             <div class="member-body">
                                 <h4 class="bluetext">Author</h4>
@@ -222,7 +222,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="member col-lg-6">
+                        <div class="member col-lg-5">
                             <img class="member-body profile-pic" src="/images/people/sonya.png" alt="">
                             <div class="member-body">
                                 <h4 class="bluetext">Author</h4>
@@ -231,7 +231,7 @@
                                 <div class="tealtext">sofja.soboleva@gmail.com</div>
                             </div>
                         </div>
-                        <div class="member col-lg-6">
+                        <div class="member col-lg-5">
                             <img class="member-body profile-pic" src="/images/people/zlata.png" alt="">
                             <div class="member-body">
                                 <h4 class="bluetext">Author</h4>
@@ -242,7 +242,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="member col-lg-6">
+                        <div class="member col-lg-5">
                             <img class="member-body profile-pic" src="/images/people/riri.png" alt="">
                             <div class="member-body">
                                 <h4 class="bluetext">Author</h4>
@@ -251,7 +251,7 @@
                                 <div class="tealtext">rirush2004@gmail.com</div>
                             </div>
                         </div>
-                        <div class="member col-lg-6">
+                        <div class="member col-lg-5">
                             <img class="member-body profile-pic" src="/images/people/teo.png" alt="">
                             <div class="member-body">
                                 <h4 class="bluetext">Author</h4>
@@ -263,7 +263,7 @@
                     </div>
                     <h3 class="mt-4">Business and Development House</h3>
                     <div class="row">
-                        <div class="member col-lg-6">
+                        <div class="member col-lg-5">
                             <img class="member-body profile-pic" src="/images/people/tyoma.JPG" alt="">
                             <div class="member-body">
                                 <h4 class="bluetext">Business Manager</h4>
@@ -272,7 +272,7 @@
                                 <div class="tealtext">temabelkovest@gmail.com</div>
                             </div>
                         </div>
-                        <div class="member col-lg-6">
+                        <div class="member col-lg-5">
                             <img class="member-body profile-pic" src="/images/people/ilia.png" alt="">
                             <div class="member-body">
                                 <h4 class="bluetext">Development Manager</h4>
@@ -283,7 +283,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="member col-lg-6">
+                        <div class="member col-lg-5">
                             <img class="member-body profile-pic" src="/images/people/zenja.png" alt="">
                             <div class="member-body">
                                 <h4 class="bluetext">Mood Manager</h4>
